--- a/tests/component.html
+++ b/tests/component.html
@@ -37,7 +37,7 @@
 	<div data-bind="wse_ui:{type:'textfield', name:'textfield', text:'Hi'}"></div>
 	<div data-bind="wse_ui:{type:'spinner', name:'spinner', value:20  }"></div>
 	<div data-bind="wse_ui:{type:'range', name:'range',  min:0,max:100,value:10,format:'{{value}}%' }"></div>
-	<div data-bind="wse_ui:{type:'range', name:'rangeVertical', precision:2, min:0, max:1, value:0.1, orientation:'vertical' }"></div>
+	<div data-bind="wse_ui:{type:'range', name:'rangeVertical', precision:2, min:0, max:1, value:0.1, orientation:'vertical', height:100 }"></div>
 	<div data-bind="wse_ui:{type:'combobox', name:'combobox', value:1, options:[{value:1, text:'first'},{value:2,text:'second'}]}"></div>
 
 	<div data-bind="wse_ui:{type:'vector', name:'resolution', constrainType:'ratio', items:[{type:'spinner', value:512},{type:'spinner', value:728}] }"></div>
