--- a/tests/component.html
+++ b/tests/component.html
@@ -6,8 +6,7 @@
 			height:100%;
 		}
 		body{
-			background-color: rgba(40, 40, 40, 1);
-			background-image:url(imgs/dark_leather.png);
+			background-color: #B8B8B8;
 			color: white;
 			margin:0px;
 			height: 100%;
@@ -25,6 +24,8 @@
 			top:10px;
 		}
 	</style>
+	<link rel="stylesheet/less" type="text/css" href="../src/components/less/base.less">
+	<script type="text/javascript" src="../thirdparty/less.js"></script>
 </head>
 <body>
 	<div class="right"></div>
@@ -38,7 +39,7 @@
 	<div data-bind="wse_ui:{type:'spinner', name:'spinner', value:20  }"></div>
 	<div data-bind="wse_ui:{type:'range', name:'range',  min:0,max:100,value:10,format:'{{value}}%' }"></div>
 	<div data-bind="wse_ui:{type:'range', name:'rangeVertical', precision:2, min:0, max:1, value:0.1, orientation:'vertical', height:100 }"></div>
-	<div data-bind="wse_ui:{type:'combobox', name:'combobox', value:1, options:[{value:1, text:'first'},{value:2,text:'second'}]}"></div>
+	<div data-bind="wse_ui:{type:'combobox', name:'combobox', value:1, items:[{value:1, text:'first'},{value:2,text:'second'}]}"></div>
 
 	<div data-bind="wse_ui:{type:'vector', name:'resolution', constrainType:'ratio', items:[{type:'spinner', value:512},{type:'spinner', value:728}] }"></div>
 
@@ -56,17 +57,10 @@
 				"knockout" : "../thirdparty/knockout",
 				"ko.mapping" : "../thirdparty/ko.mapping",
 				"goo" : "../thirdparty/goo"
-			},
-			map : {
-				"*" : {
-					"less" : "../require-lib/require-less/less",
-					"css" : "../require-lib/require-css/css"
-				}
 			}
 		})
 
-		require(['less!components/less/base.less',
-				'../tests/component'], function(){
+		require(['../tests/component'], function(){
 
 		})
 	</script>
