fix bugs of range and vector

--- a/examples/curlnoise/index.html
+++ b/examples/curlnoise/index.html
@@ -6,6 +6,11 @@
 			padding:0px;
 			background-color: #B8B8B8;
 		}
+		#CurlNoise{
+			position: absolute;
+			right:100px;
+			top:10px;
+		}
 	</style>
 	<head>
 		<title>curl noise</title>
