--- a/examples/curlnoise/index.html
+++ b/examples/curlnoise/index.html
@@ -30,7 +30,7 @@
 		<script type="text/javascript">
 			requirejs.config({
 				paths : {
-					"wse_ui" : "../../build/output/wse_ui.require",
+					"wse_ui" : "../../build/output/wse_ui",
 					"knockout" : "../../thirdparty/knockout",
 					"ko.mapping" : "../../thirdparty/ko.mapping",
 					"goo" : "../../thirdparty/goo",
