--- a/tests/build.html
+++ b/tests/build.html
@@ -3,11 +3,11 @@
 	<title></title>
 	<script type="text/javascript" src="../thirdparty/jquery.js"></script>
 	<script type="text/javascript" src="../thirdparty/underscore.js"></script>
-	<script type="text/javascript" src="../build/output/wse_ui.js"></script>
+	<script type="text/javascript" src="../build/output/qpf.js"></script>
 </head>
 <body>
 	<script type="text/javascript">
-		console.log(wse_ui);
+		console.log(qpf);
 	</script>
 </body>
 </html>
