--- a/tests/component.html
+++ b/tests/component.html
@@ -31,19 +31,19 @@
 	<div class="right"></div>
 
 	<script type="text/x-template" id="Template">
-<div id="Main" data-bind="wse_ui:{type:'window',name:'window',title:title}">
-	<div data-bind="wse_ui:{type:'button',name:'button',text:'click me!',onclick:clickHandler}"></div>
-	<div data-bind="wse_ui:{type:'label', name:'label', text:info}"></div>
-	<div data-bind="wse_ui:{type:'checkbox', name:'checkbox', checked:true,label:'im a checkbox'}"></div>
-	<div data-bind="wse_ui:{type:'textfield', name:'textfield', text:'Hi'}"></div>
-	<div data-bind="wse_ui:{type:'spinner', name:'spinner', value:20  }"></div>
-	<div data-bind="wse_ui:{type:'range', name:'range',  min:0,max:100,value:10,format:'{{value}}%' }"></div>
-	<div data-bind="wse_ui:{type:'range', name:'rangeVertical', precision:2, min:0, max:1, value:0.1, orientation:'vertical', height:100 }"></div>
-	<div data-bind="wse_ui:{type:'combobox', name:'combobox', value:1, items:[{value:1, text:'first'},{value:2,text:'second'}]}"></div>
+<div id="Main" data-bind="qpf:{type:'window',name:'window',title:title}">
+	<div data-bind="qpf:{type:'button',name:'button',text:'click me!',onclick:clickHandler}"></div>
+	<div data-bind="qpf:{type:'label', name:'label', text:info}"></div>
+	<div data-bind="qpf:{type:'checkbox', name:'checkbox', checked:true,label:'im a checkbox'}"></div>
+	<div data-bind="qpf:{type:'textfield', name:'textfield', text:'Hi'}"></div>
+	<div data-bind="qpf:{type:'spinner', name:'spinner', value:20  }"></div>
+	<div data-bind="qpf:{type:'range', name:'range',  min:0,max:100,value:10,format:'{{value}}%' }"></div>
+	<div data-bind="qpf:{type:'range', name:'rangeVertical', precision:2, min:0, max:1, value:0.1, orientation:'vertical', height:100 }"></div>
+	<div data-bind="qpf:{type:'combobox', name:'combobox', value:1, items:[{value:1, text:'first'},{value:2,text:'second'}]}"></div>
 
-	<div data-bind="wse_ui:{type:'vector', name:'resolution', constrainType:'ratio', items:[{type:'spinner', value:512},{type:'spinner', value:728}] }"></div>
+	<div data-bind="qpf:{type:'vector', name:'resolution', constrainType:'ratio', items:[{type:'spinner', value:512},{type:'spinner', value:728}] }"></div>
 
-	<div data-bind="wse_ui:{type:'vector', name:'position', items:[{type:'range', value:0},{type:'range', value:10},{type:'range', value:10}] }"></div>
+	<div data-bind="qpf:{type:'vector', name:'position', items:[{type:'range', value:0},{type:'range', value:10},{type:'range', value:10}] }"></div>
 </div>
 	</script>
 	<script type="text/javascript" src="../thirdparty/jquery.js"></script>
