--- a/tests/tree.html
+++ b/tests/tree.html
@@ -15,8 +15,7 @@
 				"core" : "../src/core",
 				"components" : "../src/components",
 				"knockout" : "../thirdparty/knockout",
-				"ko.mapping" : "../thirdparty/ko.mapping",
-				"goo" : "../thirdparty/goo"
+				"ko.mapping" : "../thirdparty/ko.mapping"
 			}
 		})
 
