--- a/tests/xml.html
+++ b/tests/xml.html
@@ -3,9 +3,7 @@
 	<title></title>
 	<link rel="stylesheet/less" type="text/css" href="../src/components/less/base.less">
 	<script type="text/javascript" src="../thirdparty/less.js"></script>
-	<script type="text/javascript" src="../thirdparty/jquery.js"></script>
 	<script type="text/javascript" src="../thirdparty/require.js"></script>
-	<script type="text/javascript" src="../thirdparty/underscore.js"></script>
 	<style type="text/css">
 		html{
 			height:100%;
@@ -26,13 +24,24 @@
 <body>
 	<script type="text/javascript">
 		requirejs.config({
-			paths : {
-				"core" : "../src/core",
-				"components" : "../src/components",
-				"knockout" : "../thirdparty/knockout",
-				"ko.mapping" : "../thirdparty/ko.mapping",
-				"goo" : "../thirdparty/goo"
-			}
+		    paths : {
+		        "qpf" : "../src/qpf",
+		        "core" : "../src/core",
+		        "components" : "../src/components",
+		        // libraries
+		        "knockout" : "../thirdparty/knockout",
+		        // Use jquery temporary, zepto's bind does not support context
+		        "$" : "../thirdparty/jquery",
+		        "_" : "../thirdparty/lodash.compat"
+		    },
+		    shim : {
+		        '$' : {
+		            exports : "$"
+		        },
+		        '_' : {
+		            exports : "_"
+		        }
+		    },
 		})
 
 		require(['../tests/xml'], function(){
