--- a/tests/tree.html
+++ b/tests/tree.html
@@ -21,7 +21,7 @@
 
 		require(['components/meta/tree',
 				'knockout'], function(Tree, ko){
-			window.indent = ko.observable(20);
+indent = ko.observable(20);
 			var tree = new Tree({
 				attributes : {
 					width:300,
