--- a/tests/xml.html
+++ b/tests/xml.html
@@ -32,7 +32,7 @@
 		        "knockout" : "../thirdparty/knockout",
 		        // Use jquery temporary, zepto's bind does not support context
 		        "$" : "../thirdparty/jquery",
-		        "_" : "../thirdparty/lodash.compat"
+		        "_" : "../thirdparty/underscore"
 		    },
 		    shim : {
 		        '$' : {
