--- a/tests/tree.html
+++ b/tests/tree.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet/less" type="text/css" href="../src/components/less/base.less">
+	<link rel="stylesheet/less" type="text/css" href="../src/style/base.less">
 	<script type="text/javascript" src="../thirdparty/less.js"></script>
 	<script type="text/javascript" src="../thirdparty/jquery.js"></script>
 	<script type="text/javascript" src="../thirdparty/underscore.js"></script>
@@ -11,15 +11,25 @@
 <body>
 	<script type="text/javascript">
 		requirejs.config({
-			paths : {
-				"core" : "../src/core",
-				"components" : "../src/components",
-				"knockout" : "../thirdparty/knockout",
-				"ko.mapping" : "../thirdparty/ko.mapping"
-			}
+			baseUrl : "../src",
+		    paths : {
+		        // libraries
+		        "knockout" : "../thirdparty/knockout",
+		        // Use jquery temporary, zepto's bind does not support context
+		        "$" : "../thirdparty/jquery",
+		        "_" : "../thirdparty/underscore"
+		    },
+		    shim : {
+		        '$' : {
+		            exports : "$"
+		        },
+		        '_' : {
+		            exports : "_"
+		        }
+		    },
 		})
 
-		require(['components/meta/tree',
+		require(['meta/tree',
 				'knockout'], function(Tree, ko){
 indent = ko.observable(20);
 			var tree = new Tree({
