--- a/tests/build.html
+++ b/tests/build.html
@@ -3,7 +3,7 @@
 	<title></title>
 	<script type="text/javascript" src="../thirdparty/jquery.js"></script>
 	<script type="text/javascript" src="../thirdparty/underscore.js"></script>
-	<script type="text/javascript" src="../build/output/qpf.js"></script>
+	<script type="text/javascript" src="../build/dist/js/qpf.js"></script>
 </head>
 <body>
 	<script type="text/javascript">
