--- a/tests/xml.html
+++ b/tests/xml.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet/less" type="text/css" href="../src/style/base.less">
+	<link rel="stylesheet/less" type="text/css" href="../src/style/naive.less">
 	<script type="text/javascript" src="../thirdparty/less.js"></script>
 	<script type="text/javascript" src="../thirdparty/require.js"></script>
 	<style type="text/css">
